Package CommonJS build along ES Module Avoid using named exports for weak-napi bindings Make ES Module compatible with Node 12 experimental modules

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,7 @@
   "trailingComma": "es5",
   "overrides": [
     {
-      "files": ["*.json", ".prettierrc.json"],
+      "files": ["*.json", ".*.json"],
       "options": {
         "tabWidth": 2
       }
