--- a/package.json
+++ b/package.json
@@ -2,14 +2,24 @@
   "name": "tc39-weakrefs-shim",
   "version": "0.0.1",
   "description": "Shim for TC39 Weakrefs proposal",
+  "main": "lib/index.js",
   "module": "module/index.js",
   "scripts": {
-    "build": "tsc -b tsconfig.dist.json",
-    "clean": "rimraf dist lib module coverage tmp-jsshell",
+    "build": "npm run build:module && npm run build:lib",
+    "build:module": "tsc -b tsconfig.dist.module.json && copyup src/**/package.json module && cp package.module.json module/package.json",
+    "build:lib": "tsc -b tsconfig.dist.lib.json && cp package.lib.json lib/package.json",
+    "clean": "rimraf dist lib module coverage tmp-jsshell tmp-node-esm tmp-node-cjs",
     "test:browser": "karma start",
     "test:browser:watch": "karma start --no-single-run",
     "test:browser:debug": "karma start --debug",
-    "test:node": "node --expose-gc -r esm -r ./tests/setup.node node_modules/mocha/bin/_mocha --opts ./mocha.opts",
+    "test:node": "node --expose-gc -r esm -r ./tests/setup.node.cjs node_modules/mocha/bin/_mocha --opts ./mocha.opts",
+    "test:node:esm:build": "tsc -p tests/setup/node/tsconfig.esm.json && copyfiles {src,tests}/**/package.json tmp-node-esm && cp package.module.json tmp-node-esm/package.json",
+    "test:node:esm": "trap 'exit 0' INT; npm run test:node:esm:build && cp package.module.esm.json tmp-node-esm/package.json && cd ./tmp-node-esm && node --expose-gc -r esm -r ./tests/setup/node ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
+    "posttest:node:esm": "rimraf tmp-node-esm",
+    "test:node:esm:experimental": "trap 'exit 0' INT; npm run test:node:esm:build && cd ./tmp-node-esm && node --experimental-modules --expose-gc -r ./tests/setup/node -r ./tests/setup/node/mocha-loadfiles-import.js ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
+    "posttest:node:esm:experimental": "rimraf tmp-node-esm",
+    "test:node:cjs": "trap 'exit 0' INT; tsc -p tests/setup/node/tsconfig.cjs.json && cp package.lib.json tmp-node-cjs/package.json && cd ./tmp-node-cjs && node --expose-gc -r ./tests/setup/node ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
+    "posttest:node:cjs": "rimraf tmp-node-cjs",
     "test:jsshell": "trap 'exit 0' INT; tsc -p tests/setup/spidermonkey/tsconfig.json && cd ./tmp-jsshell/tests/setup/spidermonkey/ && `node ../../setup.spidermonkey.js` index.js",
     "posttest:jsshell": "rimraf tmp-jsshell",
     "test": "npm run test:fmt && npm run clean && npm run build && npm run test:node && npm run test:jsshell && npm run test:browser",
@@ -18,6 +28,7 @@
   },
   "files": [
     "dist",
+    "lib",
     "module",
     "typings/tc39-weakrefs"
   ],
@@ -44,6 +55,7 @@
     "chai": "4.2.0",
     "chai-spies": "^1.0.0",
     "conditional-type-checks": "^1.0.0",
+    "copyfiles": "^2.1.0",
     "esm": "^3.2.22",
     "karma": "^4.1.0",
     "karma-chai": "0.1.0",
