Use external weak-napi-native package module output is now 100% isomorphic ESM Avoid processing CommonJS .js files through TypeScript compiler

--- a/tsconfig.dist.module.json
+++ b/tsconfig.dist.module.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "./module/",
     "noEmit": false,
-    "sourceMap": true,
-    "allowJs": true
+    "sourceMap": true
   },
   "exclude": [
     "**/tests/**",
