--- a/tsconfig.dist.lib.json
+++ b/tsconfig.dist.lib.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "./lib",
     "module": "commonjs",
-    "esModuleInterop": true
+    "target": "ES2017",
+    "esModuleInterop": true,
+    "allowJs": true
   }
 }
