--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,17 @@
 // See https://aka.ms/vscode-remote/containers for the
 // documentation about the devcontainer.json format
 {
-	"name": "Node.js (latest LTS) & TypeScript",
-	"dockerFile": "Dockerfile",
-	"extensions": [
-		"ms-vscode.vscode-typescript-tslint-plugin",
-		"esbenp.prettier-vscode",
-		"streetsidesoftware.code-spell-checker"
-	]
+    "name": "Node.js (current) & TypeScript",
+    "dockerFile": "Dockerfile",
+    "runArgs": [
+        "-v",
+        "${env:SSH_AUTH_SOCK}:/tmp/ssh-agent.socket",
+        "-e",
+        "SSH_AUTH_SOCK=/tmp/ssh-agent.socket"
+    ],
+    "extensions": [
+        "ms-vscode.vscode-typescript-tslint-plugin",
+        "esbenp.prettier-vscode",
+        "streetsidesoftware.code-spell-checker"
+    ]
 }
