Update node test tasks Add VS Code node launch configs

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "test:browser:watch": "karma start --no-single-run",
     "test:browser:debug": "karma start --debug",
     "test:node": "node --expose-gc -r esm -r ./tests/setup.node.cjs node_modules/mocha/bin/_mocha --opts ./mocha.opts",
-    "test:node:esm:build": "tsc -p tests/setup/node/tsconfig.esm.json && copyfiles {src,tests}/**/*.js tests/**/package.json tmp-node-esm && cp package.module.json tmp-node-esm/package.json",
-    "test:node:esm": "trap 'exit 0' INT; npm run test:node:esm:build && cp package.module.esm.json tmp-node-esm/package.json && cd ./tmp-node-esm && node --expose-gc -r esm -r ./tests/setup/node ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
+    "pretest:node:esm": "tsc -p tests/setup/node/tsconfig.esm.json && copyfiles {src,tests}/**/*.js tests/**/package.json tmp-node-esm && cp package.module.esm.json tmp-node-esm/package.json",
+    "test:node:esm": "trap 'exit 0' INT; cd ./tmp-node-esm && node --expose-gc -r esm -r ./tests/setup/node ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
     "posttest:node:esm": "rimraf tmp-node-esm",
-    "test:node:esm:experimental": "trap 'exit 0' INT; npm run test:node:esm:build && cd ./tmp-node-esm && node --experimental-modules --expose-gc -r ./tests/setup/node -r ./tests/setup/node/mocha-loadfiles-import.js ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
+    "pretest:node:esm:experimental": "npm run pretest:node:esm && cp package.module.json tmp-node-esm/package.json",
+    "test:node:esm:experimental": "trap 'exit 0' INT; cd ./tmp-node-esm && node --experimental-modules --expose-gc -r ./tests/setup/node -r ./tests/setup/node/mocha-loadfiles-import.js ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
     "posttest:node:esm:experimental": "rimraf tmp-node-esm",
-    "test:node:cjs": "trap 'exit 0' INT; tsc -p tests/setup/node/tsconfig.cjs.json && copyfiles tests/setup/node/*.js tmp-node-cjs && cp package.lib.json tmp-node-cjs/package.json && cd ./tmp-node-cjs && node --expose-gc -r ./tests/setup/node ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
+    "pretest:node:cjs": "tsc -p tests/setup/node/tsconfig.cjs.json && copyfiles tests/setup/node/*.js tmp-node-cjs && cp package.lib.json tmp-node-cjs/package.json",
+    "test:node:cjs": "trap 'exit 0' INT; cd ./tmp-node-cjs && node --expose-gc -r ./tests/setup/node ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
     "posttest:node:cjs": "rimraf tmp-node-cjs",
     "test:jsshell": "trap 'exit 0' INT; tsc -p tests/setup/spidermonkey/tsconfig.json && copyfiles {src,tests}/**/*.js tmp-jsshell && cd ./tmp-jsshell/tests/setup/spidermonkey/ && `node ../../setup.spidermonkey.js` index.js",
     "posttest:jsshell": "rimraf tmp-jsshell",
