Add abstract jobs for FinalizationGroup and WeakRef
Implement processing model changes from https://github.com/tc39/proposal-weakrefs/pull/86
Cleanup jobs and clear kept objects tasks are now properly enqueued
Avoid iterating over non-empty cells when cleaning a group
Spec change: cleanupSome no longer invokes callback if no empty cells

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "runtimeArgs": [
         "--expose-gc",
         "--require", "esm",
-        "--require", "${workspaceFolder}/tests/setup.node.js",
+        "--require", "${workspaceFolder}/tests/setup.node.cjs",
          ],
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
       "args": [
