--- a/package.json
+++ b/package.json
@@ -50,30 +50,30 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/chai-spies": "^1.0.0",
-    "@types/mocha": "^5.2.6",
+    "@types/chai": "^4.2.3",
+    "@types/chai-spies": "^1.0.1",
+    "@types/mocha": "^5.2.7",
     "app-root-path": "^2.2.1",
     "bin-wrapper": "^4.1.0",
     "chai": "4.2.0",
     "chai-spies": "^1.0.0",
-    "conditional-type-checks": "^1.0.0",
-    "copyfiles": "^2.1.0",
-    "esm": "^3.2.22",
-    "karma": "^4.1.0",
-    "karma-chai": "0.1.0",
+    "conditional-type-checks": "^1.0.1",
+    "copyfiles": "^2.1.1",
+    "esm": "^3.2.25",
+    "karma": "^4.3.0",
+    "karma-chai": "^0.1.0",
     "karma-chai-spies": "^0.1.4",
-    "karma-chrome-launcher": "2.2.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-instrumenter": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-mocha": "1.3.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-typescript": "^4.0.0",
-    "mocha": "^6.1.4",
-    "prettier": "1.17.0",
-    "rimraf": "^2.6.3",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.5"
+    "karma-typescript": "^5.0.0-beta",
+    "mocha": "^6.2.1",
+    "prettier": "^1.18.2",
+    "rimraf": "^3.0.0",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.3"
   },
   "dependencies": {
     "@mhofman/weak-napi-native": "^1.0.3"
