Add v8 jsshell tests Refactor jsshell runner to support both v8 and spidermonkey execution model

--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
     "pretest:node:cjs": "tsc -p tests/setup/node/tsconfig.cjs.json && copyfiles tests/setup/node/*.js tmp-node-cjs && cp package.lib.json tmp-node-cjs/package.json",
     "test:node:cjs": "trap 'exit 0' INT; cd ./tmp-node-cjs && node --expose-gc -r ./tests/setup/node ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
     "posttest:node:cjs": "rimraf tmp-node-cjs",
-    "pretest:jsshell": "jsvu --os=`node tests/setup.jsvu-os.js` --engines=spidermonkey && tsc -p tests/setup/spidermonkey/tsconfig.json && copyfiles {src,tests}/**/*.js tmp-jsshell",
-    "test:jsshell": "trap 'exit 0' INT; cd ./tmp-jsshell/tests/setup/spidermonkey/ && $HOME/.jsvu/spidermonkey index.js",
-    "posttest:jsshell": "rimraf tmp-jsshell",
+    "test:build:jsshell": "tsc -p tests/setup/jsshell/tsconfig.json && copyfiles {src,tests}/**/*.js tmp-jsshell",
+    "test:clean:jsshell": "rimraf tmp-jsshell",
+    "pretest:jsshell:sm": "jsvu --os=`node tests/setup.jsvu-os.js` --engines=spidermonkey && npm run test:build:jsshell",
+    "test:jsshell:sm": "trap 'exit 0' INT; cd ./tmp-jsshell/tests/setup/jsshell/ && $HOME/.jsvu/spidermonkey index.js",
+    "posttest:jsshell:sm": "npm run test:clean:jsshell",
+    "pretest:jsshell:v8": "jsvu --os=`node tests/setup.jsvu-os.js` --engines=v8 && npm run test:build:jsshell",
+    "test:jsshell:v8": "trap 'exit 0' INT; cd ./tmp-jsshell/tests/setup/jsshell/ && $HOME/.jsvu/v8 --harmony-weak-refs --expose-gc  index.js",
+    "posttest:jsshell:v8": "npm run test:clean:jsshell",
+    "test:jsshell": "npm run test:jsshell:sm && npm run test:jsshell:v8 || true",
     "test": "npm run test:fmt && npm run clean && npm run build && npm run test:node && npm run test:jsshell && npm run test:browser",
     "fmt": "prettier --write ./*.{js,ts,md,json,html} ./{src,docs,tests}/**/*.{js,ts,md,json,html}",
     "test:fmt": "prettier -l ./*.{js,ts,md,json,html} ./{src,docs,tests}/**/*.{js,ts,md,json,html}"
