Switch jsshell from custom download to jsvu

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pretest:node:cjs": "tsc -p tests/setup/node/tsconfig.cjs.json && copyfiles tests/setup/node/*.js tmp-node-cjs && cp package.lib.json tmp-node-cjs/package.json",
     "test:node:cjs": "trap 'exit 0' INT; cd ./tmp-node-cjs && node --expose-gc -r ./tests/setup/node ../node_modules/mocha/bin/_mocha --opts ../mocha.opts",
     "posttest:node:cjs": "rimraf tmp-node-cjs",
-    "test:jsshell": "trap 'exit 0' INT; tsc -p tests/setup/spidermonkey/tsconfig.json && copyfiles {src,tests}/**/*.js tmp-jsshell && cd ./tmp-jsshell/tests/setup/spidermonkey/ && `node ../../setup.spidermonkey.js` index.js",
+    "pretest:jsshell": "jsvu --os=`node tests/setup.jsvu-os.js` --engines=spidermonkey && tsc -p tests/setup/spidermonkey/tsconfig.json && copyfiles {src,tests}/**/*.js tmp-jsshell",
+    "test:jsshell": "trap 'exit 0' INT; cd ./tmp-jsshell/tests/setup/spidermonkey/ && $HOME/.jsvu/spidermonkey index.js",
     "posttest:jsshell": "rimraf tmp-jsshell",
     "test": "npm run test:fmt && npm run clean && npm run build && npm run test:node && npm run test:jsshell && npm run test:browser",
     "fmt": "prettier --write ./*.{js,ts,md,json,html} ./{src,docs,tests}/**/*.{js,ts,md,json,html}",
@@ -53,13 +54,12 @@
     "@types/chai": "^4.2.3",
     "@types/chai-spies": "^1.0.1",
     "@types/mocha": "^5.2.7",
-    "app-root-path": "^2.2.1",
-    "bin-wrapper": "^4.1.0",
     "chai": "4.2.0",
     "chai-spies": "^1.0.0",
     "conditional-type-checks": "^1.0.1",
     "copyfiles": "^2.1.1",
     "esm": "^3.2.25",
+    "jsvu": "^1.9.3",
     "karma": "^4.3.0",
     "karma-chai": "^0.1.0",
     "karma-chai-spies": "^0.1.4",
